try use ES module 3

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "name": "ss220-discordclact",
   "version": "1.0.0",
   "description": "<p align=\"center\"> <img alt=\"Space Station 14\" width=\"350\" height=\"350\" src=\"https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/logo.png\" /></p>",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
