Revert "switching to new inputs"
This reverts commit 059050dc14c32d7679bcb06b045337853d41889c.

--- a/action.yml
+++ b/action.yml
@@ -10,14 +10,27 @@ inputs:
   github_token:
     description:  A github token
     required: false
-    default: ${{ github.token }} 
+    default: ${{ github.token }}
+# Obsolete inputs begin
+  owner:
+    description: 'Name of the repository owner'
+    required: true
   repo:
-    description: Repository name
-    required: false
-    default: ${{ github.repository }}
+    description: 'Repository name'
+    required: true
   pull_number:
-    description: The number of the pull request whose changelog needs to be published
-    required: false
+    description: 'The number of the pull request whose changelog needs to be published'
+    required: true
+# Obsolete inputs end
+# New inputs begin 
+#  repo:
+#    description: Repository name
+#    required: false
+#    default: ${{ github.repository }}
+#  pull_number:
+#    description: The number of the pull request whose changelog needs to be published
+#    required: false
+# New inputs end
 runs:
   using: 'node20'
   main: 'index.js'
