--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "ncc build -o dist index.js"
   },
   "repository": {
     "type": "git",
